[package]
name = "rustfract"
version = "0.1.0"
authors = ["10maurycy10 <10maurycy10@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.23.1"
sdl2 = {version = "0.34.2", features = []}